--- a/package.json
+++ b/package.json
@@ -1,20 +1,29 @@
 {
   "name": "nicnacno",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Console-based tic-tac-toe game",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./spec/support/runTests.js"
   },
-  "keywords": ["game", "tictactoe", "console"],
+  "keywords": [
+    "game",
+    "tictactoe",
+    "console"
+  ],
   "author": {
     "name": "Tony Gambone",
     "email": "tonygambone@gmail.com"
   },
-  "bin": "./index.js",
+  "bin": {
+    "nicnacno": "./bin/nicnacno.js"
+  },
   "repository": "tonygambone/nicnacno",
   "license": "ISC",
   "dependencies": {
     "colors": "^1.1.2"
+  },
+  "devDependencies": {
+    "jasmine": "^2.4.1"
   }
 }
